--- a/.github/workflows/ci-unit-broker-broker-gp2.yaml
+++ b/.github/workflows/ci-unit-broker-broker-gp2.yaml
@@ -58,8 +58,11 @@ jobs:
               - '*.md'
               - '**/*.md'
 
+      - name: print env
+        run: echo ${{ steps.changes.outputs.all_count  }} && echo ${{ steps.changes.outputs.docs_count  }} && echo ${{ steps.changes.outputs.docs  }} && echo ${{steps.changes.outputs.all_count > steps.changes.outputs.docs_count}}
+
       - name: Cache local Maven repository
-        if: ${{ steps.changes.outputs.all_count > steps.changes.outputs.docs_count }}
+        if: ${{ steps.changes.outputs.all_count }} > ${{ steps.changes.outputs.docs_count }}
         uses: actions/cache@v2
         with:
           path: |
